# x8A4

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  tfp0.plist  x8A4.c  x8A4_CLI.c
Docs/: Doxyfile
Docs/html/: dir_050dbe9f83839be7359d3d2e52808557.html  dir_52bed8acfaac088d5968cb2c84d7645d.html  dir_965eb9d2edb8cb4296864e8d82ed0861.html  dir_d69fddb65e10ed1e1aad5b4f2a8c0135.html  files.html  globals.html  globals_func.html  index.html  kernel_8c.html  kpf_8c.html  logger_8c.html  menudata.js  nvram_8c.html  offsets_8c.html  osobject_8c.html  registry_8c.html  services_8c.html  slide_8c.html  x8_a4_8c.html
Docs/html/search/: all_3.js  all_4.js  all_5.js  all_8.js  all_b.js  all_e.js  files_0.js  files_2.js  files_3.js  files_5.js  files_6.js  functions_0.js  functions_1.js  functions_2.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  searchdata.js
Docs/latex/: files.tex  kernel_8c.tex  kpf_8c.tex  logger_8c.tex  nvram_8c.tex  offsets_8c.tex  osobject_8c.tex  refman.tex  registry_8c.tex  services_8c.tex  slide_8c.tex  x8_a4_8c.tex
Include/XPF/: xpf.h
Include/choma/: MachO.h
Include/x8A4/: x8A4.h
Include/x8A4/Kernel/: kernel.h  kpf.h  nvram.h  offsets.h  osobject.h  slide.h
Include/x8A4/Logger/: logger.h
Include/x8A4/Registry/: registry.h
Include/x8A4/Services/: services.h
Kernel/: kernel.c  kpf.c  nvram.c  offsets.c  osobject.c  slide.c
Logger/: logger.c
Plugins/IOKernelRW/: Makefile  iokernelrw_krw_plugin.c
Registry/: registry.c
Services/: services.c
